@@ -1,3 +1,9 @@
+*gitlab-workhorse-2.3.0 (09 Jul 2017)
+
+  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
+  +gitlab-workhorse-2.3.0.ebuild:
+  www-servers/gitlab-workhorse:  Add ebuild for gitlab-workhorse-2.3.0
+
   09 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
   -gitlab-workhorse-1.2.1-r1.ebuild, -gitlab-workhorse-1.3.0-r1.ebuild:
   www-servers/gitlab-workhorse:  Purge obsolete versions.
